[Rangga] fix: fixing overflowing footer style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,14 +17,6 @@ VALUE PARAMETER:
 maka logic = $breakpoint / 16px = ${hasil}em
 URUTAN Menambah media query: base + typography -> layout & grid -> page layout -> component
 */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
-
-html {
-  font-size: 10px; }
-
 .galeri__image-container {
   padding: 0;
   margin: 0;
@@ -40,7 +32,7 @@ html {
   background-color: black; }
 
 .galeri__photo-container {
-  padding: 2rem 0;
+  padding: 1.25rem 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
@@ -48,29 +40,29 @@ html {
 .galeri__photo-line {
   display: flex;
   justify-content: space-around;
-  padding: 0 0 10rem;
+  padding: 0 0 6.25rem;
   flex-wrap: wrap; }
   @media only screen and (max-width: 37.5em) {
     .galeri__photo-line {
       padding: 0; } }
 
 .galeri__photo-image {
-  width: 30rem;
-  height: 30rem;
+  width: 18.75rem;
+  height: 18.75rem;
   background-color: coral;
-  border-radius: 1rem;
+  border-radius: 0.625rem;
   overflow: hidden;
   cursor: pointer; }
   @media only screen and (max-width: 37.5em) {
     .galeri__photo-image {
-      margin-bottom: 2rem; } }
+      margin-bottom: 1.25rem; } }
 
 .galeri__image {
   width: auto;
   height: 100%; }
 
 .galeri__custom-modal-content {
-  border-radius: 1rem;
+  border-radius: 0.625rem;
   overflow: hidden; }
 
 .galeri__custom-modal-dialog {
