--- a/resources/sass/pages/_galeri.scss
+++ b/resources/sass/pages/_galeri.scss
@@ -24,7 +24,7 @@
 }
 
 .galeri__photo-container {
-    padding: 2rem 0;
+    padding: 1.25rem 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -33,7 +33,7 @@
 .galeri__photo-line {
   display: flex;
   justify-content: space-around;
-  padding: 0 0 10rem;
+  padding: 0 0 6.25rem;
   flex-wrap: wrap;
 
   @include respon(phone) {
@@ -42,15 +42,15 @@
 }
 
 .galeri__photo-image {
-  width: 30rem;
-  height: 30rem;
+  width: 18.75rem;
+  height: 18.75rem;
   background-color: coral;
-  border-radius: 1rem;
+  border-radius: 0.625rem;
   overflow: hidden;
   cursor: pointer;
 
   @include respon(phone){
-    margin-bottom: 2rem;
+    margin-bottom: 1.25rem;
   }
 }
 
@@ -60,7 +60,7 @@
 }
 
 .galeri__custom-modal-content {
-  border-radius: 1rem;
+  border-radius: 0.625rem;
   overflow: hidden;
 }
 
